
* GITHUB#12128, GITHUB#12133: Speed up docvalues set query by making use of sortedness. (Robert Muir, Uwe Schindler)

* GITHUB#12050: Reuse HNSW graph for intialization during merge (Jack Mazanec)

* GITHUB#12155: Speed up DocValuesRewriteMethod by making use of sortedness. (Greg Miller)

* GITHUB#12139: Faster indexing of string fields. (Adrien Grand)

Bug Fixes
---------------------

* GITHUB#12158: KeywordField#newSetQuery should clone input BytesRef[] to avoid modifying provided array. (Greg Miller)

Build
---------------------

* GITHUB#12131: Generate gradle.properties from gradlew, if absent (Colvin Cowie, Uwe Schindler)

Other
---------------------

* GITHUB#11868: Add a FilterIndexInput and FilterIndexOutput class to more easily and safely create delegate
  IndexInput and IndexOutput classes (Marc D'Mello)

======================== Lucene 9.5.0 =======================

API Changes
---------------------
* GITHUB#12093: Deprecate support for UTF8TaxonomyWriterCache and changed default to LruTaxonomyWriterCache.
  Please use LruTaxonomyWriterCache instead. (Vigya Sharma)

* GITHUB#11998: Add new stored fields and termvectors interfaces: IndexReader.storedFields()
  and IndexReader.termVectors(). Deprecate IndexReader.document() and IndexReader.getTermVector().
  The new APIs do not rely upon ThreadLocal storage for each index segment, which can greatly
  reduce RAM requirements when there are many threads and/or segments.
  (Adrien Grand, Robert Muir)

* GITHUB#11742: MatchingFacetSetsCounts#getTopChildren now properly returns "top" children instead
  of all children. (Greg Miller)

* GITHUB#11772: Removed native subproject and WindowsDirectory implementation from lucene.misc. Recommendation:
  use MMapDirectory implementation on Windows. (Robert Muir, Uwe Schindler, Dawid Weiss)

* GITHUB#11804: FacetsCollector#collect is no longer final, allowing extension. (Greg Miller)
